5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1675_1952.log
== TEST (2019-05-01 16:36:39) 
-- CODE:
salario=float(input())

if(salario<=1659.38):
	salario1=salario-(salario*0.08)
	if(salario1<=1903.98):
		print(salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print(salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print(salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print(salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print(salario2)
elif(salario>=1659.39 and salario<=2765.66):
	salario1=salario-(salario*0.09)
	if(salario1<=1903.98):
		print(salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print(salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print(salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print(salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print(salario2)
elif(salario>=2765.67 and salario<=5531.31):
	salario1=salario-(salario*0.11)
	if(salario1<=1903.98):
		print(salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print(salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print(salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print(salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print(salario2)
elif(salario>5531.31):
	salario1=salario-608.44
	if(salario1<=1903.98):
		print(salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print(salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print(salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print(salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print(salario2)
	

-- OUTPUT:
1135.7952
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:40:45) 
-- CODE:
salario=float(input())

if(salario<=1659.38):
	salario1=salario-(salario*0.08)
	if(salario1<=1903.98):
		print("Salario liquido = R$", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$", salario2)
elif(salario>=1659.39 and salario<=2765.66):
	salario1=salario-(salario*0.09)
	if(salario1<=1903.98):
		print("Salario liquido = R$", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$", salario2)
elif(salario>=2765.67 and salario<=5531.31):
	salario1=salario-(salario*0.11)
	if(salario1<=1903.98):
		print("Salario liquido = R$", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$", salario2)
elif(salario>5531.31):
	salario1=salario-608.44
	if(salario1<=1903.98):
		print("Salario liquido = R$", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$", salario2)
	

-- OUTPUT:
Salario liquido = R$ 1135.7952
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:41:16) 
-- CODE:
salario=float(input())

if(salario<=1659.38):
	salario1=salario-(salario*0.08)
	if(salario1<=1903.98):
		print("Salario liquido = R$", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$", salario2)
elif(salario>=1659.39 and salario<=2765.66):
	salario1=salario-(salario*0.09)
	if(salario1<=1903.98):
		print("Salario liquido = R$", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$", salario2)
elif(salario>=2765.67 and salario<=5531.31):
	salario1=salario-(salario*0.11)
	if(salario1<=1903.98):
		print("Salario liquido = R$", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$", salario2)
elif(salario>5531.31):
	salario1=salario-608.44
	if(salario1<=1903.98):
		print("Salario liquido = R$", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$", salario2)
	

-- EXECUTION TIME:
0.131136
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido = R$ 1135.7952
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido = R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido = R$ 3571.7559999999994
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:41:26) 
-- CODE:
salario=float(input())

if(salario<=1659.38):
	salario1=salario-(salario*0.08)
	if(salario1<=1903.98):
		print("Salario liquido = R$", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$", salario2)
elif(salario>=1659.39 and salario<=2765.66):
	salario1=salario-(salario*0.09)
	if(salario1<=1903.98):
		print("Salario liquido = R$", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$", salario2)
elif(salario>=2765.67 and salario<=5531.31):
	salario1=salario-(salario*0.11)
	if(salario1<=1903.98):
		print("Salario liquido = R$", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$", salario2)
elif(salario>5531.31):
	salario1=salario-608.44
	if(salario1<=1903.98):
		print("Salario liquido = R$", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$", salario2)
	

-- OUTPUT:
Salario liquido = R$ 1135.7952
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:42:49) 
-- CODE:
salario=float(input())

if(salario<=1659.38):
	salario1=salario-(salario*0.08)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>=1659.39 and salario<=2765.66):
	salario1=salario-(salario*0.09)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>=2765.67 and salario<=5531.31):
	salario1=salario-(salario*0.11)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>5531.31):
	salario1=salario-608.44
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
	

-- EXECUTION TIME:
0.200667
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido = R$  1135.7952
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido = R$  1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido = R$  3571.7559999999994
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:42:56) 
-- CODE:
salario=float(input())

if(salario<=1659.38):
	salario1=salario-(salario*0.08)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>=1659.39 and salario<=2765.66):
	salario1=salario-(salario*0.09)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>=2765.67 and salario<=5531.31):
	salario1=salario-(salario*0.11)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>5531.31):
	salario1=salario-608.44
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
	

-- OUTPUT:
Salario liquido = R$  1135.7952
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:43:36) 
-- CODE:
salario=float(input())

if(salario<=1659.38):
	salario1=salario-(salario*0.08)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>=1659.39 and salario<=2765.66):
	salario1=salario-(salario*0.09)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>=2765.67 and salario<=5531.31):
	salario1=salario-(salario*0.11)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>5531.31):
	salario1=salario-608.44
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
	

-- OUTPUT:
Salario liquido = R$  1135.7952
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:43:44) 
-- CODE:
salario=float(input())

if(salario<=1659.38):
	salario1=salario-(salario*0.08)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>=1659.39 and salario<=2765.66):
	salario1=salario-(salario*0.09)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>=2765.67 and salario<=5531.31):
	salario1=salario-(salario*0.11)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>5531.31):
	salario1=salario-608.44
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
	

-- OUTPUT:
Salario liquido = R$  1135.7952
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:44:34) 
-- CODE:
salario=float(input())

if(salario<=1659.38):
	salario1=salario-(salario*0.08)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>=1659.39 and salario<=2765.66):
	salario1=salario-(salario*0.09)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>=2765.67 and salario<=5531.31):
	salario1=salario-(salario*0.11)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>5531.31):
	salario1=salario-608.44
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
	

-- OUTPUT:
Salario liquido = R$  1135.7952
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:47:00) 
-- CODE:
salario=float(input())

if(salario<=1659.38):
	salario1=salario-(salario*0.08)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>=1659.39 and salario<=2765.66):
	salario1=salario-(salario*0.09)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>=2765.67 and salario<=5531.31):
	salario1=salario-(salario*0.11)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>5531.31):
	salario1=salario-608.44
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
	

-- OUTPUT:
Salario liquido = R$  1135.7952
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:07:47) 
-- CODE:
salario=float(input())

if(salario<=1659.38):
	salario1=salario-(salario*0.08)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", round(salario1,2)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", round(salario2,2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", round(salario2,2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", round(salario2,2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", round(salario2,2)
elif(salario>=1659.39 and salario<=2765.66):
	salario1=salario-(salario*0.09)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>=2765.67 and salario<=5531.31):
	salario1=salario-(salario*0.11)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
elif(salario>5531.31):
	salario1=salario-608.44
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", salario1)
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", salario2)
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", salario2)
	

-- ERROR:
File "XXXX", line 7
    elif(salario1>=1903.99 and salario1<=2826.65):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:11:18) 
-- CODE:
salario=float(input())

if(salario<=1659.38):
	salario1=salario-(salario*0.08)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", round(salario1,2))
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", round(salario2,2))
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", round(salario2,2))
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", round(salario2,2))
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", round(salario2,2))
elif(salario>=1659.39 and salario<=2765.66):
	salario1=salario-(salario*0.09)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", round(salario1,2))
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", round(salario2,2))
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", round(salario2,2))
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", round(salario2,2))
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", round(salario2,2))
elif(salario>=2765.67 and salario<=5531.31):
	salario1=salario-(salario*0.11)
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", round(salario2,2))
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", round(salario2,2))
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", round(salario2,2))
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", round(salario2,2))
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", round(salario2,2))
elif(salario>5531.31):
	salario1=salario-608.44
	if(salario1<=1903.98):
		print("Salario liquido = R$ ", round(salario1,2))
	elif(salario1>=1903.99 and salario1<=2826.65):
		salario2=salario1-(salario1*0.075)
		print("Salario liquido = R$ ", round(salario2,2))
	elif(salario1>=2826.66 and salario1<=3751.05):
		salario2=salario1-(salario1*0.15)
		print("Salario liquido = R$ ", round(salario2,2))
	elif(salario1>=3751.06 and salario1<=4664.68):
		salario2=salario1-(salario1*0.225)
		print("Salario liquido = R$ ", round(salario2,2))
	elif(salario1>4664.68):
		salario2=salario1-(salario1*0.275)
		print("Salario liquido = R$ ", round(salario2,2))
	

-- EXECUTION TIME:
0.133311
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido = R$  1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido = R$  1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido = R$  3571.76
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
